--- a/leap-angular/src/components/layout/Sidebar.scss
+++ b/leap-angular/src/components/layout/Sidebar.scss
@@ -15,6 +15,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     min-height: 0;
+    max-height: calc(100vh - 200px); // 确保有足够空间显示header和footer
 
     // 自定义滚动条样式
     &::-webkit-scrollbar {
